Fix: There should be no double scroll in the code block language dropdown list (Firefox).

--- a/packages/ckeditor5-theme-lark/theme/ckeditor5-code-block/codeblock.css
+++ b/packages/ckeditor5-theme-lark/theme/ckeditor5-code-block/codeblock.css
@@ -24,4 +24,5 @@
 	/* There could be dozens of languages available. Use scroll to prevent a 10e6px dropdown. */
 	max-height: 250px;
 	overflow-y: auto;
+	overflow-x: hidden;
 }
